create logout functions
