# routes/authRoute.js
@@ -1,6 +1,6 @@
 import express from 'express'
 import { validate } from '../middlewares/validate.js'
-import { login, register } from '../controllers/authController.js'
+import { login, logout, register } from '../controllers/authController.js'
 import { uservalidationSchema } from '../validators/userValidator.js'
 
 
@@ -10,6 +10,8 @@ const authRoute = express.Router()
 authRoute.post('/register',validate(uservalidationSchema), register)
 // login route
 authRoute.post('/login', login)
+// logout route
+authRoute.post('/logout', logout)
 
 
 
